apps/production/seerr/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
spec:
  template:
    spec:
      securityContext:
        fsGroup: 1000
        sysctls:
          - name: net.ipv6.conf.all.disable_ipv6
            value: "1"
