apps/production/seerr/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-route
  namespace: seerr
spec:
  hostnames:
    - seerr.fanen.dk
